--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -1,1 +1,6 @@
-
+---
+layout: archive
+title: "IROS 2025 workshop"
+permalink: /projects/
+---
+Here you can describe your projects or showcase them.
