--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -1,6 +1,52 @@
 ---
 layout: archive
-title: "IROS 2025 workshop"
+title: "The SOFT Frontier 2: Practical Applications in Soft Robotics"
 permalink: /iros2025ws/
 ---
-Here you can describe your projects or showcase them.
+
+## Abstract
+
+The second SOFT Frontier Workshop at IROS 2025 will focus on advancing the practical applications of soft robotics. Building on the success of the IROS 2024 workshop “The SOFT frontiers: adaptive technologies for soft robotics”, which discussed adaptability in soft robotic systems, this workshop will explore the translation of cutting-edge research into real-world applications. Despite significant academic progress, soft robotics has yet to realize its full potential in various practical domains.
+
+This workshop aims to provide an in-depth overview of emerging applications, such as medicine, environmental applications, and industrial automation, highlighting recent breakthroughs and discussing the critical issues of adaptability, stability, and sustainability in real-world settings. The program will feature presentations from leading scientific experts and industrial pioneers, as well as an open call for young researchers to share their innovative work, fostering cross-domain and cross-generational dialogue.
+
+Panel discussions will focus on the practical hurdles of deploying soft robots and potential solutions, ensuring the field’s continued growth and impact. Our target audience is not only roboticists but also people in other fields (such as food science, biology, etc.), so that they can get knowledge of the potential of soft robots for their areas to promote the intersection and application of multiple disciplines.
+
+**Time:** 20–24 October 2025  
+**Location:** Hangzhou International Expo Center (HIEC)
+
+---
+
+## Organizers
+
+- **Zixi Chen**, Scuola Superiore Sant’Anna (SSSA)
+- **Josie Hughes**, École Polytechnique Fédérale de Lausanne (EPFL)
+- **Guoying Gu**, Shanghai Jiao Tong University (SJTU)
+- **Benhui Dai**, École Polytechnique Fédérale de Lausanne (EPFL)
+- **Cesare Stefanini**, Scuola Superiore Sant’Anna (SSSA)
+
+---
+
+## Program
+
+TBD
+
+---
+
+## Call for Young Frontiers
+
+### What?
+Instead of a call for papers, we issue a call for young frontiers in this workshop to give young researchers the opportunity to present their systematic research, not just one paper. Organizers will select three winners from the applicants. Each winner can win a prize of **2,000 RMB** sponsored by **Soft Robot Technology Co., Ltd. (SRT)** and present their work via a **poster and a 10-minute talk**. In addition, they are also invited to join the panel discussion and social dinner sponsored by SRT with senior researchers and industrial experts.
+
+### Who?
+PhD students, postdoctoral researchers, and assistant professors are welcome to apply. The Young Frontiers **MUST** attend in person to give the talk.
+
+### How?
+Applicants should send their CV and a one-page talk proposal (no format requirement) to **sft.froniter@gmail.com**. The proposal should describe how the applicants plan to present their work in a 10-minute talk, and systematic research related to practical applications is welcome.
+
+- **Application Deadline:** September 1, 2025  
+- **Winner Notification:** September 15, 2025
+
+---
+
+We thank the sponsorship for the young frontiers award and social dinner from **Soft Robot Technology Co., Ltd. (SRT)**.
