--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -12,7 +12,7 @@ This workshop aims to provide an in-depth overview of emerging applications, suc
 
 Panel discussions will focus on the practical hurdles of deploying soft robots and potential solutions, ensuring the field’s continued growth and impact. Our target audience is not only roboticists but also people in other fields (such as food science, biology, etc.), so that they can get knowledge of the potential of soft robots for their areas to promote the intersection and application of multiple disciplines.
 
-**Time:** 20–24 October 2025  
+**Time:** 8-12am, 20 October 2025  
 **Location:** Hangzhou International Expo Center (HIEC)
 
 ---
