--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -19,6 +19,8 @@ Panel discussions will focus on the practical hurdles of deploying soft robots a
 
 ## Organizers
 
+<img src="{{ site.url }}/images/IROS2025ws/organizers.png" height = "150">
+
 - **Zixi Chen**, Scuola Superiore Sant’Anna (SSSA)
 - **Josie Hughes**, École Polytechnique Fédérale de Lausanne (EPFL)
 - **Guoying Gu**, Shanghai Jiao Tong University (SJTU)
@@ -50,3 +52,5 @@ Applicants should send their CV and a one-page talk proposal (no format requirem
 ---
 
 We thank the sponsorship for the young frontiers award and social dinner from **Soft Robot Technology Co., Ltd. (SRT)**.
+
+<img src="{{ site.url }}/images/IROS2025ws/logos_woTC.png" height = "150">
