--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -38,7 +38,7 @@ TBD
 ## Call for Young Frontiers
 
 ### What?
-Instead of a call for papers, we issue a call for young frontiers in this workshop to give young researchers the opportunity to present their systematic research, not just one paper. Organizers will select three winners from the applicants. Each winner can win a prize of **2,000 RMB** sponsored by **Soft Robot Technology Co., Ltd. (SRT)** and present their work via a **poster and a 10-minute talk**. In addition, they are also invited to join the panel discussion and social dinner sponsored by SRT with senior researchers and industrial experts.
+Instead of a call for papers, we issue a call for young frontiers in this workshop to give young researchers the opportunity to present their systematic research, not just one paper. Organizers will select three winners from the applicants. Each winner can win a prize of <span style="color:red;">**2,000 RMB**</span> sponsored by **Soft Robot Technology Co., Ltd. (SRT)** and present their work via a **poster and a 10-minute talk**. In addition, they are also invited to join the panel discussion and social dinner sponsored by SRT with senior researchers and industrial experts.
 
 ### Who?
 PhD students, postdoctoral researchers, and assistant professors are welcome to apply. The Young Frontiers **MUST** attend in person to give the talk.
