--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -21,7 +21,7 @@ Panel discussions will focus on the practical hurdles of deploying soft robots a
 
 <img src="{{ site.url }}/images/IROS2025ws/organizers.png" height = "150">
 
-- **Zixi Chen**, Scuola Superiore Sant’Anna (SSSA)
+- [**Zixi Chen**](https://zixichen007115.github.io/), Scuola Superiore Sant’Anna (SSSA)
 - **Josie Hughes**, École Polytechnique Fédérale de Lausanne (EPFL)
 - **Guoying Gu**, Shanghai Jiao Tong University (SJTU)
 - **Benhui Dai**, École Polytechnique Fédérale de Lausanne (EPFL)
