--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -44,7 +44,7 @@ Instead of a call for papers, we issue a call for young frontiers in this worksh
 PhD students, postdoctoral researchers, and assistant professors are welcome to apply. The Young Frontiers <span style="color:red;">**MUST**</span> attend in person to give the talk.
 
 ### How?
-Applicants should send their CV and a one-page talk proposal (no format requirement) to **[sft.froniter@gmail.com](mailto:sft.froniter@gmail.com)**. The proposal should describe how the applicants plan to present their work in a 10-minute talk, and systematic research related to practical applications is welcome.
+Applicants should send their CV and a one-page talk proposal (no format requirement) to **[sft.froniter@gmail.com](mailto:sft.froniter@gmail.com)**. The proposal should describe how the applicants plan to present their work in a 10-minute talk. Presentations of systematic research related to practical applications are also welcome.
 
 - Application Deadline: <span style="color:red;">**September 1, 2025**</span>  
 - Winner Notification: September 15, 2025
