--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -29,7 +29,7 @@ Panel discussions will focus on the practical hurdles of deploying soft robots a
 
 ---
 
-## Program
+## Tentative Speakers
 
 <img src="{{ site.url }}/images/IROS2025ws/speakers.png" height = "150">
 
