--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -35,8 +35,8 @@ Panel discussions will focus on the practical hurdles of deploying soft robots a
 
 - [**Arianna Menciassi**](https://www.santannapisa.it/it/arianna-menciassi), Scuola Superiore Sant’Anna (SSSA)
 - [**Hongliang Ren**](https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang), The Chinese University of Hong Kong (CUHK)
-- [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli), Zhejiang University
-- [**Li Wen**](https://softrobotics.buaa.edu.cn/), Beihang University
+- [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli), Zhejiang University (ZJU)
+- [**Li Wen**](https://softrobotics.buaa.edu.cn/), Beihang University (BUAA)
 - [**Nanshu Lu**](https://www.ae.utexas.edu/people/faculty/faculty-directory/lu), The University of Texas at Austin (UT Austin)
 
 ---
