--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -8,7 +8,7 @@ permalink: /iros2025ws/
 
 The second SOFT Frontier Workshop at IROS 2025 will focus on advancing the practical applications of soft robotics. Building on the success of the IROS 2024 workshop [“The SOFT frontiers: adaptive technologies for soft robotics”](https://sites.google.com/view/sft-front/iros-2024), which discussed adaptability in soft robotic systems, this workshop will explore the translation of cutting-edge research into real-world applications. 
 
-Despite significant academic progress, soft robotics has yet to realize its potential in practical applications fully. This workshop aims to provide an in-depth overview of promising applications, such as medicine, environmental applications, and industrial automation, highlighting recent breakthroughs and discussing the critical issues of adaptability, stability, and sustainability in real-world settings. 
+Despite significant academic progress, soft robotics has yet to realize its potential in practical applications fully. This workshop aims to provide an in-depth overview of promising applications, such as medicine, environmental fields, and industrial automation, highlighting recent breakthroughs and discussing the critical issues of adaptability, stability, and sustainability in real-world settings. 
 
 The program will feature presentations from leading scientific experts and industrial pioneers, as well as an open call for young researchers to share their innovative work, fostering cross-domain and cross-generational dialogue. Panel discussions will focus on the practical hurdles of deploying soft robots and potential solutions, ensuring the field’s continued growth and impact. 
 
