--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -35,7 +35,7 @@ The program will feature presentations from leading scientific experts and indus
 Instead of a call for papers, we issue a call for young frontiers in this workshop, allowing young researchers to present their systematic research, not just one paper. Organizers will select three winners from the applicants. Each winner can win a prize of <span style="color:red;">**2,000 RMB**</span> sponsored by Soft Robot Technology Co., Ltd. (SRT) and present their work via <span style="color:red;">**a poster and a 10-minute talk**</span>. In addition, they are also invited to join the social dinner sponsored by SRT with senior researchers and industrial experts.
 
 ### Who?
-PhD students, postdoctoral researchers, and assistant professors are welcome to apply. The Young Frontiers <span style="color:red;">**MUST**</span> attend in person to give the talk.
+PhD students, postdoctoral researchers, and early-career faculty are welcome to apply. The Young Frontiers <span style="color:red;">**MUST**</span> attend in person to give the talk.
 
 ### How?
 Applicants should send their CV and a one-page talk proposal (no format requirement) to **[sft.froniter@gmail.com](mailto:sft.froniter@gmail.com)**. The proposal should describe how the applicants plan to present their work in a 10-minute talk. Presentations of systematic research related to the practical applications of soft robotics are welcome.
