--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -17,15 +17,15 @@ The program will feature presentations from leading scientific experts and indus
 
 ---
 
-## Tentative Speakers
+## Senior Speakers
 
 <img src="{{ site.url }}/images/IROS2025ws/speakers.png" height = "150">
 
-- [**Arianna Menciassi**](https://www.santannapisa.it/it/arianna-menciassi), Scuola Superiore Sant’Anna (SSSA)
+- [**Helge Wurdemann**](http://www.softhaptics.website/), University College London (UCL)
+- [**Li Wen**](https://softrobotics.buaa.edu.cn/), Beihang University (BUAA)
 - [**Hongliang Ren**](https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang), The Chinese University of Hong Kong (CUHK)
 - [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli), Zhejiang University (ZJU)
-- [**Li Wen**](https://softrobotics.buaa.edu.cn/), Beihang University (BUAA)
-- [**Nanshu Lu**](https://www.ae.utexas.edu/people/faculty/faculty-directory/lu), The University of Texas at Austin (UT Austin)
+- [**Arianna Menciassi**](https://www.santannapisa.it/it/arianna-menciassi), Scuola Superiore Sant’Anna (SSSA)
 
 ---
 
@@ -42,7 +42,16 @@ Applicants should send their CV and a one-page talk proposal (no format requirem
 
 - Application Deadline: <span style="color:red;">**September 1, 2025**</span>  
 - Winner Notification: September 15, 2025
-  
+
+### Results
+Young Speakers
+
+<img src="{{ site.url }}/images/IROS2025ws/young_speakers.png" height = "150">
+
+- [**Jiangtao Su**](https://www.linkedin.com/in/jiangtao-su-417320126/?originalSubdomain=sg), Nanyang Technological University (NTU)
+- [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en), EPFL
+- [**Yitong Zhou**](http://www.zhouyitonglab.com/), South China University of Technology (SCUT)
+
 ---
 
 ## Organizers
@@ -53,7 +62,7 @@ Applicants should send their CV and a one-page talk proposal (no format requirem
 - [**Josie Hughes**](https://people.epfl.ch/josie.hughes?lang=en), École Polytechnique Fédérale de Lausanne (EPFL)
 - [**Guoying Gu**](https://softrobotics.sjtu.edu.cn/), Shanghai Jiao Tong University (SJTU)
 - [**Benhui Dai**](https://sites.google.com/view/benhui-dai/about), École Polytechnique Fédérale de Lausanne (EPFL)
-- [**Cesare Stefanini**](https://www.santannapisa.it/it/cesare-stefanini), Scuola Superiore Sant’Anna (SSSA)
+- [**Cesare Stefanini**](https://mbzuai.ac.ae/study/faculty/cesare-stefanini/), Mohamed bin Zayed University of Artificial Intelligence (MBZUAI)
   
 ---
 
