--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -17,6 +17,26 @@ The program will feature presentations from leading scientific experts and indus
 
 ---
 
+## Schedule
+
+08:30-08:35 Workshop Opening
+08:35-08:45 Young Speaker Talk - Jiangtao Su: Bio-Inspired Electronic Skin for Soft Robotics
+08:45-08:55 Young Speaker Talk – Qinghua Guan: Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications
+08:55-09:20 Senior Speaker Talk – Helge Wurdemann
+09:20-09:30 Young Speaker Talk – Yitong Zhou: Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety
+09:30-09:55 Senior Speaker Talk – Li Wen: Intelligent soft robot for environmental interaction
+
+09:55-10:00 Group Photo 
+10:00-10:30 Coffee Break & Poster
+
+10:30-10:45 Award and SRT Researcher Talk
+10:45-11:10 3rd Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics
+11:10-11:35 4th Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea
+11:35-12:00 5th Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies
+12:00-12:30 Panel Discussion
+
+---
+
 ## Senior Speakers
 
 <img src="{{ site.url }}/images/IROS2025ws/speakers.png" height = "150">
@@ -31,18 +51,6 @@ The program will feature presentations from leading scientific experts and indus
 
 ## Call for Young Frontiers
 
-### What?
-Instead of a call for papers, we issue a call for young frontiers in this workshop, allowing young researchers to present their systematic research, not just one paper. Organizers will select three winners from the applicants. Each winner can win a prize of <span style="color:red;">**2,000 RMB**</span> sponsored by Soft Robot Technology Co., Ltd. (SRT) and present their work via <span style="color:red;">**a poster and a 10-minute talk**</span>. In addition, they are also invited to join the social dinner sponsored by SRT with senior researchers and industrial experts.
-
-### Who?
-PhD students, postdoctoral researchers, and early-career faculty are welcome to apply. The Young Frontiers <span style="color:red;">**MUST**</span> attend in person to give the talk.
-
-### How?
-Applicants should send their CV and a one-page talk proposal (no format requirement) to **[sft.frontier@gmail.com](mailto:sft.frontier@gmail.com)**. The proposal should describe how the applicants plan to present their work in a 10-minute talk. Presentations of systematic research related to the practical applications of soft robotics are welcome.
-
-- Application Deadline: <span style="color:red;">**September 1, 2025**</span>  
-- Winner Notification: September 15, 2025
-
 ### Results
 Young Speakers
 
@@ -51,6 +59,9 @@ Young Speakers
 - [**Jiangtao Su**](https://www.linkedin.com/in/jiangtao-su-417320126/?originalSubdomain=sg), Nanyang Technological University (NTU)
 - [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en), EPFL
 - [**Yitong Zhou**](http://www.zhouyitonglab.com/), South China University of Technology (SCUT)
+
+  ### Posters
+  Yiming He, Rui Peng, Zhanwei Wang
 
 ---
 
