--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -12,7 +12,7 @@ Despite significant academic progress, soft robotics has yet to realize its pote
 
 The program will feature presentations from leading scientific experts and industrial pioneers, as well as an open call for young researchers to share their innovative work, fostering cross-domain and cross-generational dialogue. Panel discussions will focus on the practical hurdles of deploying soft robots and potential solutions, ensuring the field’s continued growth and impact. 
 
-**Time:** 8:00-12:00, 20 October 2025  
+**Time:** 8:30-12:30, 20 October 2025  
 **Location:** Room 102B, Hangzhou International Expo Center (HIEC)
 
 ---
@@ -20,19 +20,29 @@ The program will feature presentations from leading scientific experts and indus
 ## Schedule
 
 08:30-08:35 Workshop Opening
+
 08:35-08:45 Young Speaker Talk - Jiangtao Su: Bio-Inspired Electronic Skin for Soft Robotics
+
 08:45-08:55 Young Speaker Talk – Qinghua Guan: Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications
+
 08:55-09:20 Senior Speaker Talk – Helge Wurdemann
+
 09:20-09:30 Young Speaker Talk – Yitong Zhou: Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety
+
 09:30-09:55 Senior Speaker Talk – Li Wen: Intelligent soft robot for environmental interaction
 
 09:55-10:00 Group Photo 
+
 10:00-10:30 Coffee Break & Poster
 
 10:30-10:45 Award and SRT Researcher Talk
+
 10:45-11:10 3rd Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics
+
 11:10-11:35 4th Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea
+
 11:35-12:00 5th Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies
+
 12:00-12:30 Panel Discussion
 
 ---
@@ -57,11 +67,12 @@ Young Speakers
 <img src="{{ site.url }}/images/IROS2025ws/young_speakers.png" height = "150">
 
 - [**Jiangtao Su**](https://www.linkedin.com/in/jiangtao-su-417320126/?originalSubdomain=sg), Nanyang Technological University (NTU)
-- [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en), EPFL
+- [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en), École Polytechnique Fédérale de Lausanne (EPFL)
 - [**Yitong Zhou**](http://www.zhouyitonglab.com/), South China University of Technology (SCUT)
 
-  ### Posters
-  Yiming He, Rui Peng, Zhanwei Wang
+Posters
+
+Yiming He, Rui Peng, Zhanwei Wang
 
 ---
 
