--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -37,11 +37,11 @@ The program will feature presentations from leading scientific experts and indus
 
 10:30-10:45 Award and SRT Researcher Talk
 
-10:45-11:10 3rd Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics
+10:45-11:10 Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics
 
-11:10-11:35 4th Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea
+11:10-11:35 Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea
 
-11:35-12:00 5th Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies
+11:35-12:00 Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies
 
 12:00-12:30 Panel Discussion
 
