--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -19,30 +19,18 @@ The program will feature presentations from leading scientific experts and indus
 
 ## Schedule
 
-08:30-08:35 Workshop Opening
-
-08:35-08:45 Young Speaker Talk - Jiangtao Su: Bio-Inspired Electronic Skin for Soft Robotics
-
-08:45-08:55 Young Speaker Talk – Qinghua Guan: Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications
-
-08:55-09:20 Senior Speaker Talk – Helge Wurdemann
-
-09:20-09:30 Young Speaker Talk – Yitong Zhou: Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety
-
-09:30-09:55 Senior Speaker Talk – Li Wen: Intelligent soft robot for environmental interaction
-
-09:55-10:00 Group Photo 
-
-10:00-10:30 Coffee Break & Poster
-
-10:30-10:45 Award and SRT Researcher Talk
-
-10:45-11:10 Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics
-
-11:10-11:35 Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea
-
-11:35-12:00 Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies
-
+08:30-08:35 Workshop Opening <br>
+08:35-08:45 Young Speaker Talk - Jiangtao Su: Bio-Inspired Electronic Skin for Soft Robotics <br>
+08:45-08:55 Young Speaker Talk – Qinghua Guan: Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications <br>
+08:55-09:20 Senior Speaker Talk – Helge Wurdemann <br>
+09:20-09:30 Young Speaker Talk – Yitong Zhou: Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety <br>
+09:30-09:55 Senior Speaker Talk – Li Wen: Intelligent soft robot for environmental interaction <br>
+09:55-10:00 Group Photo <br>
+10:00-10:30 Coffee Break & Poster <br>
+10:30-10:45 Award and SRT Researcher Talk <br>
+10:45-11:10 Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics <br>
+11:10-11:35 Senior Speaker Talk – Tiefeng Li: Soft matter mechanics and soft robot for deep sea <br>
+11:35-12:00 Senior Speaker Talk – Arianna Menciassi: Artificial urinary system developed by soft robotic technologies <br>
 12:00-12:30 Panel Discussion
 
 ---
