--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -20,17 +20,17 @@ The program will feature presentations from leading scientific experts and indus
 ## Schedule
 
 08:30-08:35 Workshop Opening <br>
-08:35-08:45 Young Speaker Talk - Jiangtao Su: Bio-Inspired Electronic Skin for Soft Robotics <br>
-08:45-08:55 Young Speaker Talk – Qinghua Guan: Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications <br>
-08:55-09:20 Senior Speaker Talk – Helge Wurdemann <br>
-09:20-09:30 Young Speaker Talk – Yitong Zhou: Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety <br>
-09:30-09:55 Senior Speaker Talk – Li Wen: Intelligent Soft Robot for Environmental Interaction <br>
+08:35-08:45 Young Speaker Talk - [**Jiangtao Su**](https://www.linkedin.com/in/jiangtao-su-417320126/?originalSubdomain=sg): Bio-Inspired Electronic Skin for Soft Robotics <br>
+08:45-08:55 Young Speaker Talk – [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en): Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications <br>
+08:55-09:20 Senior Speaker Talk – [**Helge Wurdemann**](http://www.softhaptics.website/) <br>
+09:20-09:30 Young Speaker Talk – [**Yitong Zhou**](http://www.zhouyitonglab.com/): Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety <br>
+09:30-09:55 Senior Speaker Talk – [**Li Wen**](https://softrobotics.buaa.edu.cn/): Intelligent Soft Robot for Environmental Interaction <br>
 09:55-10:00 Group Photo <br>
 10:00-10:30 Coffee Break & Poster <br>
 10:30-10:45 Award and SRT Researcher Talk <br>
-10:45-11:10 Senior Speaker Talk – Hongliang Ren: Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics <br>
-11:10-11:35 Senior Speaker Talk – Tiefeng Li: Soft Matter Mechanics and Soft Robot for Deep Sea <br>
-11:35-12:00 Senior Speaker Talk – Arianna Menciassi: Artificial Urinary System Developed by Soft Robotic Technologies <br>
+10:45-11:10 Senior Speaker Talk – [**Hongliang Ren**](https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang): Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics <br>
+11:10-11:35 Senior Speaker Talk – [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli), Zhejiang University (ZJU): Soft Matter Mechanics and Soft Robot for Deep Sea <br>
+11:35-12:00 Senior Speaker Talk – [**Arianna Menciassi**](https://www.santannapisa.it/it/arianna-menciassi): Artificial Urinary System Developed by Soft Robotic Technologies <br>
 12:00-12:30 Panel Discussion
 
 ---
