--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -60,7 +60,7 @@ Young Speakers
 
 Posters
 
-Yiming He, Rui Peng, Zhanwei Wang, Yuchen Liu, Benhui Dai
+Yiming He, Rui Peng, Zhanwei Wang, Yuchen Liu
 
 ---
 
