--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -22,7 +22,7 @@ The program will feature presentations from leading scientific experts and indus
 08:30-08:35 Workshop Opening <br>
 08:35-08:45 Young Speaker Talk - [**Jiangtao Su**](https://www.linkedin.com/in/jiangtao-su-417320126/?originalSubdomain=sg): Bio-Inspired Electronic Skin for Soft Robotics <br>
 08:45-08:55 Young Speaker Talk – [**Qinghua Guan**](https://people.epfl.ch/qinghua.guan?lang=en): Embedding Morphology-Level Intelligence into Architected Soft Robots for Real-World Applications <br>
-08:55-09:20 Senior Speaker Talk – [**Helge Wurdemann**](http://www.softhaptics.website/): Shaping Future Applications with Stiffness-controllable Robotics <br>
+08:55-09:20 Senior Speaker Talk – [**Helge Wurdemann**](http://www.softhaptics.website/): Shaping Future Applications with Stiffness-Controllable Robotics <br>
 09:20-09:30 Young Speaker Talk – [**Yitong Zhou**](http://www.zhouyitonglab.com/): Soft Hand–Wrist Exoskeletons for Rehabilitation and Occupational Safety <br>
 09:30-09:55 Senior Speaker Talk – [**Li Wen**](https://softrobotics.buaa.edu.cn/): Intelligent Soft Robot for Environmental Interaction <br>
 09:55-10:00 Group Photo <br>
