--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -29,7 +29,7 @@ The program will feature presentations from leading scientific experts and indus
 10:30-11:00 Coffee Break & Poster <br>
 11:00-11:15 Award and SRT Researcher Talk <br>
 11:15-11:40 Senior Speaker Talk – [**Hongliang Ren**](https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang): Tethered & Tetherless Reconfigurations at Tissue‐Continuum-Origami Interfaces In Vivo Soft Flexible Robotics <br>
-11:40-12:05 Senior Speaker Talk – [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli), Zhejiang University (ZJU): Soft Matter Mechanics and Soft Robot for Deep Sea <br>
+11:40-12:05 Senior Speaker Talk – [**Tiefeng Li**](https://person.zju.edu.cn/en/tiefengli): Soft Matter Mechanics and Soft Robot for Deep Sea <br>
 12:05-12:30 Senior Speaker Talk – [**Arianna Menciassi**](https://www.santannapisa.it/it/arianna-menciassi): Artificial Urinary System Developed by Soft Robotic Technologies <br>
 12:30-13:00 Panel Discussion
 
