--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -60,7 +60,7 @@ Young Speakers
 
 Posters
 
-Benjamin Calme, Benhui Dai, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang 
+Benjamin Calme, Benhui Dai, Kyle Liam Walker, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang, 
 
 ---
 
