--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -4,7 +4,7 @@ title: "The SOFT Frontier 2: Practical Applications in Soft Robotics"
 permalink: /iros2025ws/
 ---
 
-## [Online Meeting Link](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NWIwMzFjNzktZTdhYS00ZTc0LTg5OTAtZTgxOWEwYjhhMmQ1%40thread.v2/0?context=%7b%22Tid%22%3a%22d97360e3-138d-4b5f-956f-a646c364a01e%22%2c%22Oid%22%3a%22114678c7-4596-4e86-8897-d8297b1b64c7%22%7d)
+## [Click here to join the online meeting](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NWIwMzFjNzktZTdhYS00ZTc0LTg5OTAtZTgxOWEwYjhhMmQ1%40thread.v2/0?context=%7b%22Tid%22%3a%22d97360e3-138d-4b5f-956f-a646c364a01e%22%2c%22Oid%22%3a%22114678c7-4596-4e86-8897-d8297b1b64c7%22%7d)
 
 ## Abstract
 
