--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -62,7 +62,7 @@ Young Speakers
 
 Posters
 
-Benjamin Calme, Benhui Dai, Kyle Liam Walker, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang, 
+Benjamin Calme, Benhui Dai, Fanghao Zhou, Kyle Liam Walker, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang, 
 
 ---
 
