--- a/_pages/IROS2025.md
+++ b/_pages/IROS2025.md
@@ -62,7 +62,7 @@ Young Speakers
 
 Posters
 
-Benjamin Calme, Benhui Dai, Fanghao Zhou, Kyle Liam Walker, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang, 
+Benjamin Calme, Benhui Dai, Fanghao Zhou, Kyle Liam Walker, Rui Peng, Yiming He, Yuchen Liu, Zhanwei Wang
 
 ---
 
@@ -78,6 +78,6 @@ Benjamin Calme, Benhui Dai, Fanghao Zhou, Kyle Liam Walker, Rui Peng, Yiming He,
   
 ---
 
-We thank the sponsorship for the Young Frontiers Award and social dinner from Soft Robot Technology Co., Ltd. (SRT).
+We thank the sponsorship for the Young Frontiers Award and social dinner from [Soft Robot Technology Co., Ltd. (SRT)](https://www.softrobottech.com/web/en/).
 
 <img src="{{ site.url }}/images/IROS2025ws/logos_woTC.png" height = "150">
